--- a/examples/multicolumn-vertical.jrxml
+++ b/examples/multicolumn-vertical.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.18.1.final using JasperReports Library version 6.18.1-9d75d1969e774d4f179fb3be8401e98a0e6d1611  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" pageWidth="595" pageHeight="420" orientation="Landscape" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="example1" columnCount="3" pageWidth="595" pageHeight="420" orientation="Landscape" columnWidth="185" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="51adeca7-9f15-46d6-b157-714028ffc1e5">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="postgres"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -65,6 +65,34 @@
 		<property name="com.jaspersoft.studio.field.label" value="country_code"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="global_user"/>
 	</field>
+	<variable name="formula1" class="java.lang.Long">
+		<variableExpression><![CDATA[$F{globaluser_id}+20]]></variableExpression>
+	</variable>
+	<variable name="sumglobalid" class="java.lang.Long" resetType="Group" resetGroup="grpCountry" calculation="StandardDeviation">
+		<variableExpression><![CDATA[$F{globaluser_id}]]></variableExpression>
+	</variable>
+	<variable name="averageglovalid" class="java.lang.String" resetType="Group" resetGroup="grpCountry" calculation="Average">
+		<variableExpression><![CDATA[$F{globaluser_id}]]></variableExpression>
+	</variable>
+	<group name="grpCountry" isStartNewPage="true">
+		<groupExpression><![CDATA[$F{country_code}]]></groupExpression>
+		<groupHeader>
+			<band height="50">
+				<textField>
+					<reportElement x="20" y="0" width="100" height="30" uuid="3164f3df-e6e3-41e7-a1c0-cce7458c3be1"/>
+					<textFieldExpression><![CDATA["begin"+$F{country_code}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupHeader>
+		<groupFooter>
+			<band height="50">
+				<textField>
+					<reportElement x="20" y="0" width="100" height="30" uuid="317bfe65-e315-44e3-8b46-f33563995ecb"/>
+					<textFieldExpression><![CDATA["end "+$F{country_code}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupFooter>
+	</group>
 	<columnHeader>
 		<band height="30" splitType="Stretch">
 			<staticText>
@@ -73,17 +101,13 @@
 				</reportElement>
 				<text><![CDATA[fullname/email]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="80" y="0" width="100" height="30" uuid="3164f3df-e6e3-41e7-a1c0-cce7458c3be1"/>
-				<textFieldExpression><![CDATA["begin"+$F{country_code}]]></textFieldExpression>
-			</textField>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="20" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<textField>
-				<reportElement x="0" y="0" width="70" height="20" isPrintWhenDetailOverflows="true" uuid="3edb30c4-7b3c-43f8-ab8f-a58d7b5487ac">
+				<reportElement x="30" y="0" width="70" height="20" isPrintWhenDetailOverflows="true" uuid="3edb30c4-7b3c-43f8-ab8f-a58d7b5487ac">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6788ad40-bc57-49d2-9348-6c78d197c1c4"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
@@ -97,18 +121,27 @@
 				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
 			</textField>
 		</band>
-		<band height="85">
+		<band height="88">
 			<textField>
-				<reportElement x="10" y="10" width="100" height="30" uuid="5b454978-79ac-438e-85dc-bd26a2090f0c">
+				<reportElement x="80" y="0" width="100" height="30" uuid="5b454978-79ac-438e-85dc-bd26a2090f0c">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a63d9780-909f-4bfa-b006-749ecbf99fe5"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{globaluser_id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="20" y="50" width="100" height="30" uuid="770ae381-4a49-419f-af24-ee7d307e5d51">
+				<reportElement x="0" y="50" width="70" height="30" uuid="770ae381-4a49-419f-af24-ee7d307e5d51">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="34d8c44c-bbda-4075-9d71-1bffcfe179ce"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{globaluser_id}+ (2 +1)]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="90" y="50" width="90" height="30" forecolor="#0537FF" uuid="df7949f7-1611-4d7c-bbaa-6439bbcaa910"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["average: "+$V{averageglovalid}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="1" y="10" width="100" height="30" forecolor="#FF0905" uuid="3caabe9b-fe62-4f35-a840-36df1c58e80c"/>
+				<textFieldExpression><![CDATA["sum: "+ $V{sumglobalid}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
